<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/option_menu"
            app:title="@string/detail_user_activity_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Foto Profil -->
    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/appBarLayout"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/imgprofileuser"
        android:scaleType="centerCrop" />

    <!-- Nama Pengguna (Bold) -->
    <TextView
        android:id="@+id/tv_nameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/username"
        android:textStyle="bold" />

    <!-- Nama Pengguna -->
    <TextView
        android:id="@+id/tv_usernameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_nameDetail"
        android:layout_centerHorizontal="true"
        android:text="@string/username" />

    <!-- Followers dan Following -->
    <LinearLayout
        android:id="@+id/linearLayoutFollowersFollowing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_usernameDetail"
        android:layout_marginTop="8dp"
        android:gravity="center">

        <!-- Followers -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers" />

            <TextView
                android:id="@+id/tv_number_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_100"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Following -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following" />

            <TextView
                android:id="@+id/tv_number_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_100"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:layout_below="@id/linearLayoutFollowersFollowing"
        android:layout_marginTop="10dp"
        app:tabTextColor="@android:color/white"
        app:tabIndicatorColor="@android:color/white"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextAppearance="@style/CustomTabTextAppearance"
        app:tabMode="fixed"
        app:tabGravity="fill" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabs" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</RelativeLayout>